All working! Just few details

--- a/app/src/main/res/layout/custom_num_pad.xml
+++ b/app/src/main/res/layout/custom_num_pad.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/half_standard_margin"
-        android:background="@drawable/outlined_rounded_corners_gray"
+        android:background="@null"
         android:clickable="false"
         android:enabled="false"
         android:focusable="false"
@@ -23,6 +23,8 @@
         android:inputType="none"
         android:lines="1"
         android:maxLength="4"
+        android:paddingEnd="@dimen/half_standard_margin"
+        android:paddingStart="@dimen/half_standard_margin"
         android:textColor="@color/grayMM"
         android:textColorHint="@color/grayLight"
         android:textIsSelectable="false"
