--- a/app/src/main/res/layout/game_table_fragment.xml
+++ b/app/src/main/res/layout/game_table_fragment.xml
@@ -5,33 +5,37 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabGameDiceUp"
-        android:layout_width="@dimen/quadruple_standard_margin"
-        android:layout_height="@dimen/quadruple_standard_margin"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="@dimen/standard_margin"
-        android:layout_marginTop="@dimen/standard_margin"
-        android:src="@drawable/ic_dice_multiple_white_24dp"
-        android:visibility="visible"
-        tools:visibility="visible" />
-
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/llGameTableRoundNumberAndIconContainerHeader"
         android:layout_width="match_parent"
         android:layout_height="@dimen/table_header_height"
-        android:layout_alignParentTop="true"
-        android:gravity="end|center_vertical"
-        android:orientation="vertical">
+        android:gravity="bottom"
+        android:layout_alignParentTop="true">
 
         <TextView
-            android:id="@+id/tvGameTableRoundNumberUp"
+            android:id="@+id/tvGameTableRoundNumberTopStart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/double_standard_margin"
+            android:drawablePadding="@dimen/half_standard_margin"
+            android:drawableTint="@color/grayMM"
+            android:gravity="center"
+            android:layout_alignParentStart="true"
+            android:rotation= "-215"
+            android:textColor="@color/grayMM"
+            android:textSize="@dimen/table_player_round_num_text_size"
+            tools:drawableBottom="@drawable/ic_east"
+            tools:targetApi="m"
+            tools:text="16" />
+
+        <TextView
+            android:id="@+id/tvGameTableRoundNumberTopEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/double_standard_margin"
             android:drawablePadding="@dimen/half_standard_margin"
             android:drawableTint="@color/grayMM"
+            android:layout_alignParentEnd="true"
             android:gravity="center"
             android:rotation="215"
             android:textColor="@color/grayMM"
@@ -40,7 +44,7 @@
             tools:targetApi="m"
             tools:text="16" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fcvGameTableSeats"
@@ -50,22 +54,22 @@
         android:layout_below="@+id/llGameTableRoundNumberAndIconContainerHeader"
         android:tag="GameTableSeatsFragment" />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/llGameTableRoundNumberAndIconContainerFooter"
         android:layout_width="match_parent"
         android:layout_height="@dimen/table_header_height"
-        android:layout_alignParentBottom="true"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:gravity="top"
+        android:layout_alignParentBottom="true">
 
         <TextView
-            android:id="@+id/tvGameTableRoundNumberDown"
+            android:id="@+id/tvGameTableRoundNumberBottomStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/double_standard_margin"
             android:drawablePadding="@dimen/half_standard_margin"
             android:drawableTint="@color/grayMM"
             android:gravity="center"
+            android:layout_alignParentStart="true"
             android:rotation="45"
             android:textColor="@color/grayMM"
             android:textSize="@dimen/table_player_round_num_text_size"
@@ -73,18 +77,33 @@
             tools:targetApi="m"
             tools:text="16" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/tvGameTableRoundNumberBottomEnd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/double_standard_margin"
+            android:drawablePadding="@dimen/half_standard_margin"
+            android:drawableTint="@color/grayMM"
+            android:layout_alignParentEnd="true"
+            android:gravity="center"
+            android:visibility="gone"
+            android:rotation="-45"
+            android:textColor="@color/grayMM"
+            android:textSize="@dimen/table_player_round_num_text_size"
+            tools:drawableBottom="@drawable/ic_east"
+            tools:targetApi="m"
+            tools:text="16"
+            tools:ignore="RelativeOverlap" />
+
+    </RelativeLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabGameDiceDown"
+        android:id="@+id/fabGameTableDice"
         android:layout_width="@dimen/quadruple_standard_margin"
         android:layout_height="@dimen/quadruple_standard_margin"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="@dimen/standard_margin"
-        android:layout_marginBottom="@dimen/standard_margin"
-        android:src="@drawable/ic_dice_multiple_white_24dp"
-        android:visibility="visible"
-        tools:visibility="visible" />
+        tools:layout_alignParentEnd="true"
+        tools:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/standard_margin"
+        android:src="@drawable/ic_dice_multiple_white_24dp" />
 
 </RelativeLayout>
