--- a/app/src/main/res/layout/game_hand_actions_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_hand_actions_dialog_fragment.xml
@@ -10,6 +10,33 @@
     android:padding="@dimen/standard_margin">
 
     <LinearLayout
+        android:id="@+id/btHandActionsDialogPenaltiesCancel"
+        style="@style/buttonHandAction"
+        android:background="@drawable/button_rounded_corners_purple"
+        android:visibility="gone"
+        android:padding="@dimen/half_standard_margin"
+        tools:ignore="UseCompoundDrawables">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:importantForAccessibility="no"
+            android:src="@drawable/ic_penalty_white"
+            android:layout_marginBottom="@dimen/half_standard_margin" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:lines="1"
+            android:text="@string/cancel_penalties"
+            android:textAllCaps="true"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/btHandActionsDialogPenalty"
         style="@style/buttonHandAction"
         tools:ignore="UseCompoundDrawables">
