--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,7 +7,6 @@
     <dimen name="standard_margin">16dp</dimen>
     <dimen name="standard_and_half_margin">24dp</dimen>
     <dimen name="double_standard_margin">32dp</dimen>
-    <dimen name="double_and_half_standard_margin">40dp</dimen>
     <dimen name="triple_standard_margin">48dp</dimen>
     <dimen name="quadruple_standard_margin">64dp</dimen>
     <dimen name="quintuple_margin">80dp</dimen>
@@ -17,17 +16,12 @@
 
     <!-- DRAWER -->
     <dimen name="drawer_header_height">160dp</dimen>
-    <dimen name="bottom_navigation_menu_height">56dp</dimen>
 
     <!-- OLD GAMES -->
     <dimen name="cardCornerRadius">4dp</dimen>
-    <dimen name="cardview_oldgame_height">256dp</dimen>
 
     <!-- COMBINATIONS -->
-    <dimen name="combination_item_height">80dp</dimen>
-    <dimen name="combination_item_image_height">32dp</dimen>
     <dimen name="combination_item_cardview_min_height">48dp</dimen>
-    <dimen name="combination_item_cardview_full_height">92dp</dimen>
 
     <!-- GAME -->
     <dimen name="table_player_points_text_size">36sp</dimen>
@@ -35,5 +29,7 @@
     <dimen name="table_player_penalty_points_text_size">20sp</dimen>
     <dimen name="table_player_round_num_text_size">28sp</dimen>
     <dimen name="table_header_height">88dp</dimen>
+    <dimen name="list_item_spacing">16dp</dimen>
+    <dimen name="list_item_spacing_half">8dp</dimen>
 
 </resources>
