--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,16 +25,6 @@
         <item name="android:layout_margin">@dimen/half_standard_margin</item>
     </style>
 
-    <style name="tvDialogRankingTableTitle" parent="AppTheme">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:textColor">@color/grayMM</item>
-        <item name="android:maxLines">1</item>
-        <item name="android:ellipsize">end</item>
-        <item name="android:gravity">left|start</item>
-        <item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Medium</item>
-    </style>
-
     <style name="tvRankingDialogTableContent" parent="AppTheme">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
@@ -88,14 +78,8 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:layout_marginStart">@dimen/quarter_standard_margin</item>
-        <item name="android:layout_marginEnd">@dimen/quarter_standard_margin</item>
-    </style>
-
-    <style name="RippleForLayout" parent="AppTheme">
-        <item name="android:foreground">?attr/selectableItemBackgroundBorderless</item>
-        <item name="android:clickable">true</item>
-        <item name="android:focusable">true</item>
+        <item name="android:layout_marginStart">1dp</item>
+        <item name="android:layout_marginEnd">1dp</item>
     </style>
 
 </resources>
