--- a/app/src/main/res/layout/game_list_round_item.xml
+++ b/app/src/main/res/layout/game_list_round_item.xml
@@ -76,7 +76,8 @@
                 android:layout_width="@dimen/standard_margin"
                 android:layout_height="@dimen/standard_margin"
                 android:layout_toEndOf="@+id/tvGameListItemRoundPointsP1"
-                android:src="@drawable/ic_penalty_purple"
+                android:src="@drawable/ic_whistle_black_24"
+                android:tint="@color/purplePenalty"
                 android:visibility="gone"
                 tools:ignore="ContentDescription" />
 
@@ -101,7 +102,8 @@
                 android:layout_width="@dimen/standard_margin"
                 android:layout_height="@dimen/standard_margin"
                 android:layout_toEndOf="@+id/tvGameListItemRoundPointsP2"
-                android:src="@drawable/ic_penalty_purple"
+                android:src="@drawable/ic_whistle_black_24"
+                android:tint="@color/purplePenalty"
                 android:visibility="gone"
                 tools:ignore="ContentDescription" />
 
@@ -126,7 +128,8 @@
                 android:layout_width="@dimen/standard_margin"
                 android:layout_height="@dimen/standard_margin"
                 android:layout_toEndOf="@+id/tvGameListItemRoundPointsP3"
-                android:src="@drawable/ic_penalty_purple"
+                android:src="@drawable/ic_whistle_black_24"
+                android:tint="@color/purplePenalty"
                 android:visibility="gone"
                 tools:ignore="ContentDescription" />
 
@@ -151,7 +154,8 @@
                 android:layout_width="@dimen/standard_margin"
                 android:layout_height="@dimen/standard_margin"
                 android:layout_toEndOf="@+id/tvGameListItemRoundPointsP4"
-                android:src="@drawable/ic_penalty_purple"
+                android:src="@drawable/ic_whistle_black_24"
+                android:tint="@color/purplePenalty"
                 android:visibility="gone"
                 tools:ignore="ContentDescription" />
 
