--- a/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
@@ -223,7 +223,7 @@
     </TableLayout>
 
     <Button
-        android:id="@+id/btRankingDialogSeeList"
+        android:id="@+id/btRankingDialogList"
         style="?android:buttonBarButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -232,7 +232,7 @@
         android:layout_marginTop="@dimen/standard_margin"
         android:layout_marginEnd="@dimen/standard_margin"
         android:layout_marginBottom="@dimen/standard_margin"
-        android:text="@string/see_list" />
+        android:text="@string/list" />
 
     <Button
         android:id="@+id/btRankingDialogResume"
@@ -243,7 +243,7 @@
         android:layout_marginTop="@dimen/standard_margin"
         android:layout_marginEnd="@dimen/standard_margin"
         android:layout_marginBottom="@dimen/standard_margin"
-        android:layout_toStartOf="@+id/btRankingDialogSeeList"
+        android:layout_toStartOf="@+id/btRankingDialogList"
         android:text="@string/resume" />
 
     <Button
