--- a/app/src/main/res/layout/game_table_fragment.xml
+++ b/app/src/main/res/layout/game_table_fragment.xml
@@ -9,19 +9,19 @@
         android:id="@+id/llGameTableRoundNumberAndIconContainerHeader"
         android:layout_width="match_parent"
         android:layout_height="@dimen/table_header_height"
-        android:gravity="center_vertical"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/tvGameTableRoundNumberTopStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_marginStart="@dimen/double_standard_margin"
             android:drawablePadding="@dimen/half_standard_margin"
             android:drawableTint="@color/grayMM"
             android:gravity="center"
-            android:layout_alignParentStart="true"
-            android:rotation= "-215"
+            android:rotation="-215"
             android:textColor="@color/grayMM"
             android:textSize="@dimen/table_player_round_num_text_size"
             tools:drawableBottom="@drawable/ic_east"
@@ -32,18 +32,18 @@
             android:id="@+id/tvGameTableRoundNumberTopEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_marginEnd="@dimen/double_standard_margin"
             android:drawablePadding="@dimen/half_standard_margin"
             android:drawableTint="@color/grayMM"
-            android:layout_alignParentEnd="true"
             android:gravity="center"
             android:rotation="215"
             android:textColor="@color/grayMM"
             android:textSize="@dimen/table_player_round_num_text_size"
             tools:drawableBottom="@drawable/ic_east"
+            tools:ignore="RelativeOverlap"
             tools:targetApi="m"
-            tools:text="16"
-            tools:ignore="RelativeOverlap" />
+            tools:text="16" />
 
     </RelativeLayout>
 
@@ -59,18 +59,18 @@
         android:id="@+id/llGameTableRoundNumberAndIconContainerFooter"
         android:layout_width="match_parent"
         android:layout_height="@dimen/table_header_height"
-        android:gravity="center_vertical"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/tvGameTableRoundNumberBottomStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_marginStart="@dimen/double_standard_margin"
             android:drawablePadding="@dimen/half_standard_margin"
             android:drawableTint="@color/grayMM"
             android:gravity="center"
-            android:layout_alignParentStart="true"
             android:rotation="45"
             android:textColor="@color/grayMM"
             android:textSize="@dimen/table_player_round_num_text_size"
@@ -82,19 +82,19 @@
             android:id="@+id/tvGameTableRoundNumberBottomEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_marginEnd="@dimen/double_standard_margin"
             android:drawablePadding="@dimen/half_standard_margin"
             android:drawableTint="@color/grayMM"
-            android:layout_alignParentEnd="true"
             android:gravity="center"
-            android:visibility="gone"
             android:rotation="-45"
             android:textColor="@color/grayMM"
             android:textSize="@dimen/table_player_round_num_text_size"
+            android:visibility="gone"
             tools:drawableBottom="@drawable/ic_east"
+            tools:ignore="RelativeOverlap"
             tools:targetApi="m"
-            tools:text="16"
-            tools:ignore="RelativeOverlap" />
+            tools:text="16" />
 
     </RelativeLayout>
 
@@ -102,10 +102,12 @@
         android:id="@+id/fabGameTable"
         android:layout_width="@dimen/quadruple_standard_margin"
         android:layout_height="@dimen/quadruple_standard_margin"
-        tools:layout_alignParentEnd="true"
-        tools:layout_alignParentBottom="true"
         android:layout_margin="@dimen/standard_margin"
         android:src="@drawable/ic_dice_multiple_white_24dp"
-        android:tag="ic_dice_multiple_white_24dp"/>
+        android:tag="ic_dice_multiple_white_24dp"
+        android:visibility="gone"
+        tools:layout_alignParentBottom="true"
+        tools:layout_alignParentEnd="true"
+        tools:visibility="visible" />
 
 </RelativeLayout>
