--- a/app/src/main/res/layout/game_dice_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_dice_dialog_fragment.xml
@@ -1,28 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="horizontal"
-    android:padding="48dp">
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/ivDice1"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_weight="1"
-        android:adjustViewBounds="true"
-        app:srcCompat="@drawable/one" />
+        android:layout_marginTop="@dimen/standard_margin"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="@dimen/triple_standard_margin">
 
-    <ImageView
-        android:id="@+id/ivDice2"
+        <ImageView
+            android:id="@+id/ivDice1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/one" />
+
+        <ImageView
+            android:id="@+id/ivDice2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/one" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_weight="1"
-        android:adjustViewBounds="true"
-        app:srcCompat="@drawable/one" />
+        android:layout_marginBottom="@dimen/standard_margin"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/standard_margin"
+        android:paddingStart="@dimen/triple_standard_margin"
+        android:paddingEnd="@dimen/triple_standard_margin"
+        android:paddingBottom="@dimen/triple_standard_margin">
 
-</com.google.android.material.circularreveal.CircularRevealLinearLayout>
+        <ImageView
+            android:id="@+id/ivDice3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/one" />
+
+        <ImageView
+            android:id="@+id/ivDice4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/one" />
+
+    </LinearLayout>
+
+</LinearLayout>
