--- a/app/src/main/res/menu/game_menu.xml
+++ b/app/src/main/res/menu/game_menu.xml
@@ -18,7 +18,7 @@
     <item
         android:id="@+id/action_resume_game"
         android:icon="@drawable/ic_play_arrow_white_24px"
-        android:title="@string/end"
+        android:title="@string/resume"
         android:visible="false"
         app:showAsAction="never" />
 
