--- a/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
@@ -213,6 +213,6 @@
         android:layout_below="@+id/tlRanking"
         android:layout_alignParentEnd="true"
         android:layout_margin="@dimen/standard_margin"
-        android:text="@android:string/ok" />
+        android:text="@string/ok" />
 
 </RelativeLayout>
