--- a/app/src/main/res/layout/game_points_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_points_dialog_fragment.xml
@@ -6,6 +6,17 @@
     android:padding="@dimen/standard_margin"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:textAllCaps="true"
+        android:gravity="center"
+        android:text="@string/points"
+        android:textColor="@color/grayMM"
+        android:layout_margin="@dimen/standard_margin" />
+
     <com.etologic.mahjongscoring2.app.custom_views.CustomNumPad
         android:id="@+id/cnpPointsDialog"
         android:layout_gravity="center"
@@ -24,7 +35,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@android:string/cancel"
+            android:text="@string/cancel"
             android:textColor="@color/colorAccent" />
 
         <Button
@@ -32,7 +43,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@android:string/ok"
+            android:text="@string/ok"
             android:textColor="@color/colorAccent" />
 
     </LinearLayout>
